# lm-investigation

./: EDA_llama_nb.py  LICENSE  README.md  initial_analysis_nb.py  prompts.json  pyproject.toml
daniel-prelim-results/: README.md  requirements.txt
daniel-prelim-results/analysis/: cosine_similarity_analysis.py
daniel-prelim-results/datasets/: AITA_ai_smalldataset.csv  AITAposts.csv  AITAresponses.csv
daniel-prelim-results/generation code/: augment_with_ai.py  config.json  create_human_dataset.py  filter_human_responses.py
daniel-prelim-results/readability_scores/: flesh_reading_ease.py
daniel-prelim-results/word2vecPCA/: word2vec_pca_analysis.py
data_generation/: apptainer_generate.sh  generate.py  generate_vllm.py  vllm_generate.sh
features/: biber_features.py  kl_divergence.py  ks_test.py  visualize_metrics.py
models/: models.ipynb
notebooks/biber_features_analysis/: biber_features.ipynb
notebooks/stylometric_analysis/: P1_EDA_AITA_Dolphin_Mistral.ipynb  P1_EDA_Cornell_Llama_3_2.ipynb  P1_Plots.ipynb
subbredit-mixed-responses-dolphin-1k/: dolph_ai_responses_1k.csv.xls  ngram_analysis.py  readability_analysis.py  tfidf_analysis.py
