[project]
name = "ds5500"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy",
    "pandas",
    "torch",
    "pybiber",
    "polars",
    "ollama>=0.6.0",
    "tqdm>=4.67.1",
    "vllm>=0.11.0",
    "convokit>=4.0.0",
]


[[tool.uv.index]]
name = "pytorch-cu123"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "ruff",
]
